--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -8,8 +8,18 @@
 <body>
 <h1>My Super Fancy Spa</h1>
 <div id = "clientProfile">
+    <h2>My Profile</h2>
+    <p th:text="{name}"></p>
+    <p th:text="{skinType}"></p>
+    <p th:text="{manipedi}"></p>
 </div>
 <div id = "servicesMenu">
+    <th:block th:each = "facial : ${appropriateFacials}">
+        <li th:text="{facial}"></li>
+    </th:block>
+
+
+
 </div>
 </body>
 </html>
