updated html and added model attributes.

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -14,9 +14,21 @@
     <p th:text="{manipedi}"></p>
 </div>
 <div id = "servicesMenu">
+    <div>
+        <h3>Facial Treatments</h3>
+        <p>Based on your skin type, our estheticians recommend the following service</p>
+
     <th:block th:each = "facial : ${appropriateFacials}">
         <li th:text="{facial}"></li>
     </th:block>
+    </div>
+    <div> <th:if = '${manipedi.equals("manicure")}'>
+        <h3>Manicure</h3>
+        <p th:replace="~{fragments :: manicureDescription}"></p>
+        <th:if = '${manipedi.equals("pedicure")}'>
+        <h3>Pedicure</h3>
+        <p th:replace="~{fragments :: pedicureDescription}"></p>
+    </div>
 
 
 
